--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,16 +10,30 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: 1.16
+    
+    - name: Install cfssl
+      working-directory: ${{env.working-directory}}
+      run: |
+        sudo apt-get update
+        sudo apt-get -y install golang-cfssl
+
+    - name: Create credentials
+      working-directory: ${{env.working-directory}}
+      run: | 
+        make init
+        make gencert
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: make test
